language/move-lang/tests/move_check/typing/pack_invalid_argument.exp
error: 

   ┌── tests/move_check/typing/pack_invalid_argument.move:2:19 ───
   │
 2 │     struct S { f: u64 }
   │                   --- Is not compatible with: 'u64'
   ·
 7 │         (S { f: false } : S);
   │                 ----- The type: 'bool'
   │                 ^^^^^ Invalid argument for field 'f' for '0x8675309::M::S'
   │

error: 

    ┌── tests/move_check/typing/pack_invalid_argument.move:4:28 ───
    │
  4 │     resource struct R { s: S, f: u64, n1: Nat<u64>, n2: Nat<S> }
    │                            - Is not compatible with: '0x8675309::M::S'
    ·
 15 │          } : R);
    │              - The type: '0x8675309::M::R'
 16 │         (R {
 17 │             s: r,
    │                ^ Invalid argument for field 's' for '0x8675309::M::R'
    │

error: 

    ┌── tests/move_check/typing/pack_invalid_argument.move:4:34 ───
    │
  4 │     resource struct R { s: S, f: u64, n1: Nat<u64>, n2: Nat<S> }
    │                                  --- Is not compatible with: 'u64'
    ·
 18 │             f: false,
    │                ----- The type: 'bool'
    │                ^^^^^ Invalid argument for field 'f' for '0x8675309::M::R'
    │

error: 

    ┌── tests/move_check/typing/pack_invalid_argument.move:4:47 ───
    │
  4 │     resource struct R { s: S, f: u64, n1: Nat<u64>, n2: Nat<S> }
    │                                               --- Is not compatible with: 'u64'
    ·
 19 │             n1: Nat { f: false },
    │                 ^^^^^^^^^^^^^^^^ Invalid argument for field 'n1' for '0x8675309::M::R'
    │                          ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/pack_invalid_argument.move:4:61 ───
    │
  4 │     resource struct R { s: S, f: u64, n1: Nat<u64>, n2: Nat<S> }
    │                                                             - Is not compatible with: '0x8675309::M::S'
    ·
 15 │          } : R);
    │              - The type: '0x8675309::M::R'
    ·
 20 │             n2: Nat{ f: r }
    │                 ^^^^^^^^^^^ Invalid argument for field 'n2' for '0x8675309::M::R'
    │

